--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,8 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "node_modules/package_name/**/*",
+    "src/**/*"
   ]
 }
