--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
