--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^10.2.0",
     "@angular/router": "^10.2.0",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.1.0",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.1.0",
