--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^11.0.2",
     "@kolkov/angular-editor": "^1.1.4",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
